[package]
name = "iced_divider"
version = "0.3.1"
edition = "2021"
authors = ["Charles Ray <icedpygui@gmail.com>"]
description = "An Iced widget for allowing adjacent containers to be resized"

[lib]
name = "iced_divider"

[dependencies]
iced = {version = "0.13.1", features = ["advanced"]}

[package.metadata.docs.rs]
all-features = true
